--- a/articles/application-gateway/index.yml
+++ b/articles/application-gateway/index.yml
@@ -10,12 +10,12 @@ metadata:
   author: vhorne
   ms.author: victorh
   ms.date: 03/24/2020
-  ms.openlocfilehash: 0ff595778193a4ff11ebd67e1cec4bccfa3afc61
-  ms.sourcegitcommit: 3246e278d094f0ae435c2393ebf278914ec7b97b
+  ms.openlocfilehash: 708050cad9cf7e27243b9af21f28dbc6b93b09e6
+  ms.sourcegitcommit: 4313e0d13714559d67d51770b2b9b92e4b0cc629
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 09/02/2020
-  ms.locfileid: "89378510"
+  ms.lasthandoff: 09/27/2020
+  ms.locfileid: "91397149"
 landingContent:
 - title: Application Gateway について
   linkLists:
@@ -27,6 +27,8 @@ landingContent:
     links:
     - text: よく寄せられる質問
       url: application-gateway-faq.md
+  - linkListType: whats-new
+    links:
     - text: 新機能
       url: https://azure.microsoft.com/updates/?category=networking&query=Application%20Gateway
 - title: 高トラフィック ボリュームのサポート
