commit translated contents

--- a/articles/active-directory/develop/index.yml
+++ b/articles/active-directory/develop/index.yml
@@ -9,12 +9,12 @@ metadata:
   ms.service: active-directory
   ms.subservice: develop
   ms.workload: identity
-  ms.openlocfilehash: f6893522b66f20dd26905084e5b09d303cbfd5b3
-  ms.sourcegitcommit: f845ca2f4b626ef9db73b88ca71279ac80538559
+  ms.openlocfilehash: c0f87da61b0fa2d4aed57eeef7ee9829a17d0f80
+  ms.sourcegitcommit: 32c521a2ef396d121e71ba682e098092ac673b30
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 09/09/2020
-  ms.locfileid: "89612770"
+  ms.lasthandoff: 09/25/2020
+  ms.locfileid: "91258372"
 landingContent:
 - title: Microsoft ID プラットフォームについて
   linkLists:
@@ -83,7 +83,7 @@ landingContent:
     - text: ASP.NET
       url: quickstart-v2-dotnet-native-aspnet.md
     - text: ASP.NET Core
-      url: /samples/azure-samples/active-directory-dotnet-webapp-webapi-openidconnect-aspnetcore/calling-a-web-api-in-an-aspnet-core-web-application-using-azure-ad/
+      url: quickstart-v2-aspnet-core-web-api.md
 - title: Microsoft Graph
   linkLists:
   - linkListType: get-started
@@ -120,6 +120,10 @@ landingContent:
   linkLists:
   - linkListType: whats-new
     links:
+    - text: クイック スタート:ASP.NET Core Web API を保護する
+      url: quickstart-v2-aspnet-core-web-api.md
+    - text: MSAL Python API リファレンス
+      url: /python/api/msal/
     - text: クイック スタート:アプリを登録する (改訂)
       url: quickstart-register-app.md
     - text: クイック スタート:Web API を公開する (改訂)
