--- a/articles/active-directory/external-identities/index.yml
+++ b/articles/active-directory/external-identities/index.yml
@@ -1,9 +1,9 @@
 ### YamlMime:Landing
 title: External Identities のドキュメント
-summary: External Identities は、組織が顧客やパートナーなどの外部ユーザーをセキュリティで保護して管理できるようにする一連の機能です。 B2B コラボレーションを基盤とする External Identities は、組織外のユーザーとやり取りして接続するための追加機能を提供します。
+summary: External Identities は、組織が顧客やパートナーなどの外部ユーザーをセキュリティで保護して管理できるようにする一連の機能です。 B2B コラボレーションを基盤とする External Identities は、組織外のユーザーとやり取りして接続するためのさらに多くの方法を提供します。
 metadata:
   title: External Identities のドキュメント
-  description: External Identities は、組織が顧客やパートナーなどの外部ユーザーをセキュリティで保護して管理できるようにする一連の機能です。 B2B コラボレーションを基盤とする External Identities は、組織外のユーザーとやり取りして接続するための追加機能を提供します。
+  description: External Identities は、組織が顧客やパートナーなどの外部ユーザーをセキュリティで保護して管理できるようにする一連の機能です。 B2B コラボレーションを基盤とする External Identities は、組織外のユーザーとやり取りして接続するためのさらに多くの方法を提供します。
   ms.service: active-directory
   ms.subservice: B2B
   ms.workload: identity
@@ -12,12 +12,12 @@ metadata:
   author: msmimart
   ms.author: mimart
   manager: celested
-  ms.openlocfilehash: 694b5fee19a1c0dca752e02259e3cc398ae6e55e
-  ms.sourcegitcommit: 4e5560887b8f10539d7564eedaff4316adb27e2c
+  ms.openlocfilehash: bad40c34db9f597320a05f46be92baae6632d93e
+  ms.sourcegitcommit: 32c521a2ef396d121e71ba682e098092ac673b30
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 08/06/2020
-  ms.locfileid: "87906760"
+  ms.lasthandoff: 09/25/2020
+  ms.locfileid: "91265614"
 landingContent:
 - title: External Identities について
   linkLists:
@@ -25,77 +25,63 @@ landingContent:
     links:
     - text: External Identities ソリューションの比較
       url: compare-with-b2c.md
-    - text: B2B ゲスト ユーザー アクセスとは
+    - text: Azure AD B2B コラボレーションとは
       url: what-is-b2b.md
-- title: セルフサービス サインアップ (プレビュー)
+    - text: Azure AD B2C (企業-消費者間) ID とは
+      url: https://docs.microsoft.com/azure/active-directory-b2c/overview
+- title: 組織外のユーザーとの共同作業 (B2B コラボレーション)
+  linkLists:
+  - linkListType: concept
+    links:
+    - text: B2B ゲスト ユーザーについて
+      url: user-properties.md
+    - text: B2B ゲスト ユーザーが招待に応じる方法
+      url: redemption-experience.md
+  - linkListType: how-to-guide
+    links:
+    - text: 外部コラボレーションの設定を構成する
+      url: delegate-invitations.md
+    - text: 直接フェデレーションの設定 (プレビュー)
+      url: direct-federation.md
+    - text: ワンタイム パスコードの設定 (プレビュー)
+      url: one-time-passcode.md
+    - text: ゲスト ユーザーを追加して招待する
+      url: add-users-administrator.md
+    - text: ゲスト ユーザーとして組織を脱退する
+      url: leave-the-organization.md
+- title: コンシューマーと顧客にアプリをスケーリングする (Azure AD B2C)
+  linkLists:
+  - linkListType: overview
+    links:
+    - text: Azure AD B2C について
+      url: https://docs.microsoft.com/azure/active-directory-b2c/overview
+    - text: 技術と機能の概要
+      url: https://docs.microsoft.com/azure/active-directory-b2c/technical-overview
+    - text: すべての Azure AD B2C ドキュメントを表示
+      url: https://docs.microsoft.com/azure/active-directory-b2c/
+  - linkListType: concept
+    links:
+    - text: Azure AD B2C ユーザー フロー
+      url: https://docs.microsoft.com/azure/active-directory-b2c/user-flow-overview
+    - text: Azure AD B2C カスタム ポリシー
+      url: https://docs.microsoft.com/azure/active-directory-b2c/custom-policy-overview
+  - linkListType: tutorial
+    links:
+    - text: Azure AD B2C 内にユーザーフローを作成する
+      url: https://docs.microsoft.com/azure/active-directory-b2c/tutorial-create-user-flows
+- title: B2B ゲスト ユーザーのセルフサービス サインアップ フロー (プレビュー)
   linkLists:
   - linkListType: overview
     links:
     - text: セルフサービス サインアップとは
       url: self-service-sign-up-overview.md
+  - linkListType: sample
+    links:
+    - text: ユーザー フローの API コネクタ コード サンプル
+      url: code-samples-self-service-sign-up.md
   - linkListType: how-to-guide
     links:
     - text: セルフサービス サインアップのユーザー フローを追加する
       url: self-service-sign-up-user-flow.md
     - text: ユーザー フローのカスタム属性を定義する
       url: user-flow-add-custom-attributes.md
-- title: B2B ゲスト ユーザーの招待
-  linkLists:
-  - linkListType: concept
-    links:
-    - text: B2B ゲスト ユーザーが招待に応じる方法
-      url: redemption-experience.md
-  - linkListType: quickstart
-    links:
-    - text: ゲスト ユーザーをディレクトリに追加する
-      url: b2b-quickstart-add-guest-users-portal.md
-    - text: PowerShell を使用してゲスト ユーザーを追加する
-      url: b2b-quickstart-invite-powershell.md
-  - linkListType: how-to-guide
-    links:
-    - text: 管理者がゲストを招待する方法
-      url: add-users-administrator.md
-    - text: ユーザーがゲストを招待する方法
-      url: add-users-information-worker.md
-- title: B2B コラボレーションのカスタマイズ
-  linkLists:
-  - linkListType: how-to-guide
-    links:
-    - text: B2B コラボレーションの有効化
-      url: delegate-invitations.md
-  - linkListType: deploy
-    links:
-    - text: 直接フェデレーションの設定 (プレビュー)
-      url: direct-federation.md
-    - text: Google フェデレーションの設定
-      url: google-federation.md
-    - text: ワンタイム パスコード認証の設定 (プレビュー)
-      url: one-time-passcode.md
-  - linkListType: tutorial
-    links:
-    - text: 多要素認証を適用する
-      url: b2b-tutorial-require-mfa.md
-  - linkListType: reference
-    links:
-    - text: B2B コラボレーション コードと PowerShell サンプル
-      url: code-samples.md
-- title: ゲスト ユーザーの管理
-  linkLists:
-  - linkListType: concept
-    links:
-    - text: B2B ゲスト ユーザーについて
-      url: user-properties.md
-    - text: 動的グループと B2B ゲスト
-      url: use-dynamic-groups.md
-  - linkListType: how-to-guide
-    links:
-    - text: B2B ゲスト ユーザーの監査とレポート
-      url: auditing-and-reporting.md
-    - text: B2B ゲストに対するアクセス許可の付与
-      url: add-guest-to-role.md
-    - text: 組織の許可またはブロック
-      url: allow-deny-list.md
-  - linkListType: deploy
-    links:
-    - text: B2B コラボレーション用の SaaS アプリの構成
-      url: configure-saas-apps.md
