--- a/articles/azure-vmware/toc.yml
+++ b/articles/azure-vmware/toc.yml
@@ -20,8 +20,6 @@
       href: tutorial-nsx-t-network-segment.md
     - name: 7 - オンプレミスからプライベート クラウドへのピアリング
       href: tutorial-expressroute-global-reach-private-cloud.md
-    - name: 8 - コンテンツ ライブラリを介した VM のデプロイ
-      href: tutorial-deploy-vm-content-library.md
 - name: 概念
   items:
     - name: プライベート クラウドとクラスター
@@ -36,6 +34,8 @@
       href: concepts-rbac.md
     - name: プライベート クラウドのアップグレード
       href: concepts-upgrades.md
+    - name: プライベート クラウドのモニターと修復
+      href: concepts-monitor-repair-private-cloud.md
 - name: 操作方法ガイド
   items:
     - name: Azure VMware Solution を有効にする
@@ -48,6 +48,8 @@
       href: manage-dhcp.md
     - name: 障害復旧
       href: disaster-recovery.md
+    - name: コンテンツ ライブラリを介した VM のデプロイ
+      href: deploy-vm-content-library.md
     - name: Azure のネイティブ統合
       items:
         - name: API Management
@@ -68,10 +70,16 @@
           href: deploy-traffic-manager-to-balance-avs-workloads.md
         - name: NetApp Files
           href: net-app-files.md
+    - name: GitHub Enterprise Server
+      href: github-enterprise-server.md
     - name: VMware ソリューション
       items:
         - name: vRealize Operations の設定
           href: vrealize-operations-for-avs.md
+    - name: VMware のエコシステム
+      items:
+        - name: VM のバックアップ ソリューション
+          href: ecosystem-back-up-vms.md
 - name: リファレンス
   items: null
 - name: リソース
