--- a/articles/event-grid/toc.yml
+++ b/articles/event-grid/toc.yml
@@ -40,6 +40,8 @@
       href: custom-event-to-eventhub.md
     - name: Container Registry イベント
       href: ../container-registry/container-registry-event-grid-quickstart.md?toc=%2fazure%2fevent-grid%2ftoc.json
+    - name: Azure Communication Services のイベントを処理する
+      href: ../communication-services/quickstarts/telephony-sms/handle-sms-events.md?toc=%2fazure%2fevent-grid%2ftoc.json
 - name: チュートリアル
   items:
     - name: VM が変更されたときに電子メールで通知する
@@ -112,6 +114,8 @@
               href: event-schema-app-service.md
             - name: Azure Blob Storage
               href: event-schema-blob-storage.md
+            - name: Azure Communication Services
+              href: event-schema-communication-services.md
             - name: Azure Container Registry
               href: event-schema-container-registry.md
             - name: Azure Event Hubs
@@ -214,7 +218,7 @@
       href: auth0-how-to.md
     - name: HTTP エンドポイントでのイベントの受信
       href: receive-events.md
-    - name: 配信不能と再試行
+    - name: 配信不能な場所の設定と再試行ポリシー
       href: manage-event-delivery.md
     - name: イベントのフィルター処理
       href: how-to-filter-events.md
