--- a/articles/index.yml
+++ b/articles/index.yml
@@ -13,12 +13,12 @@ metadata:
   ms.date: 09/10/2020
   featureFlags:
   - clicktale
-  ms.openlocfilehash: aec131b8c7a3e5092b6b090668fb0eb006b079a3
-  ms.sourcegitcommit: 53acd9895a4a395efa6d7cd41d7f78e392b9cfbe
+  ms.openlocfilehash: 07d167ca046bb4c4a5e5e50cec43c7685fcec8fb
+  ms.sourcegitcommit: 32c521a2ef396d121e71ba682e098092ac673b30
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 09/22/2020
-  ms.locfileid: "90904138"
+  ms.lasthandoff: 09/25/2020
+  ms.locfileid: "91262010"
 highlightedContent:
   items:
   - title: Azure 開発者向けファースト ステップ ガイド
@@ -144,8 +144,8 @@ productDirectory:
     azureCategories:
     - ai-machine-learning
     url: cognitive-services/bing-web-search/overview.md
-  - title: Communication Services
-    summary: リアルタイムの音声、ビデオ、テレフォニーをアプリに追加する
+  - title: Azure Communication Services (プレビュー)
+    summary: Microsoft Teams が使用するのと同じ安全なプラットフォームで、豊富な通信エクスペリエンスを構築
     imageSrc: ./media/index/communication-services.svg
     azureCategories:
     - web
