--- a/articles/search/TOC.yml
+++ b/articles/search/TOC.yml
@@ -144,7 +144,7 @@
           href: search-howto-complex-data-types.md
         - name: リレーショナル データをモデル化する
           href: index-sql-relational-data.md
-    - name: データの取り込み
+    - name: データをインポートする
       items:
         - name: データ インポートの概要
           href: search-what-is-data-import.md
@@ -156,44 +156,18 @@
           href: search-howto-large-index.md
         - name: 同時更新を処理する
           href: search-howto-concurrency.md
-    - name: Azure のみのデータを取り込む
+    - name: Azure データ (インデクサー) をインポートする
       items:
-        - name: インデクサーを構成する
-          href: search-indexer-overview.md
-        - name: インデクサーの監視
-          href: search-howto-monitor-indexers.md
-        - name: インデクサーのスケジュール設定
-          href: search-howto-schedule-indexers.md
-        - name: フィールドのマッピング
-          href: search-indexer-field-mappings.md
-        - name: データ ソース
+        - name: インデクサーの操作
           items:
-            - name: Azure BLOB
-              items:
-                - name: BLOB を検索する
-                  href: search-blob-storage-integration.md
-                - name: AI を使用して BLOB を理解する
-                  href: search-blob-ai-integration.md
-                - name: BLOB インデクサーを構成する
-                  href: search-howto-indexing-azure-blob-storage.md
-                - name: 一対多の BLOB のインデックス作成
-                  href: search-howto-index-one-to-many-blobs.md
-                - name: CSV BLOB のインデックス作成
-                  href: search-howto-index-csv-blobs.md
-                - name: JSON BLOB のインデックス作成
-                  href: search-howto-index-json-blobs.md
-            - name: Azure テーブル
-              href: search-howto-indexing-azure-tables.md
-            - name: Azure Cosmos DB
-              href: search-howto-index-cosmosdb.md
-            - name: Azure Data Lake Storage Gen2
-              href: search-howto-index-azure-data-lake-storage.md
-            - name: SQL Database
-              href: search-howto-connecting-azure-sql-database-to-azure-search-using-indexers.md
-            - name: SQL マネージド インスタンス
-              href: search-howto-connecting-azure-sql-mi-to-azure-search-using-indexers.md
-            - name: SQL Server VM
-              href: search-howto-connecting-azure-sql-iaas-to-azure-search-using-indexers.md
+            - name: インデクサーを構成する
+              href: search-indexer-overview.md
+            - name: インデクサーの監視
+              href: search-howto-monitor-indexers.md
+            - name: インデクサーのスケジュール設定
+              href: search-howto-schedule-indexers.md
+            - name: フィールドのマッピング
+              href: search-indexer-field-mappings.md
         - name: マネージド ID を使用して接続する
           items:
             - name: マネージド ID の概要
@@ -204,6 +178,32 @@
               href: search-howto-managed-identities-cosmos-db.md
             - name: SQL Database
               href: search-howto-managed-identities-sql.md
+        - name: Azure BLOB
+          items:
+            - name: BLOB を検索する
+              href: search-blob-storage-integration.md
+            - name: AI を使用して BLOB を理解する
+              href: search-blob-ai-integration.md
+            - name: BLOB インデクサーを構成する
+              href: search-howto-indexing-azure-blob-storage.md
+            - name: 一対多の BLOB のインデックス作成
+              href: search-howto-index-one-to-many-blobs.md
+            - name: CSV BLOB のインデックス作成
+              href: search-howto-index-csv-blobs.md
+            - name: JSON BLOB のインデックス作成
+              href: search-howto-index-json-blobs.md
+        - name: Azure テーブル
+          href: search-howto-indexing-azure-tables.md
+        - name: Azure Cosmos DB
+          href: search-howto-index-cosmosdb.md
+        - name: Azure Data Lake Storage Gen2
+          href: search-howto-index-azure-data-lake-storage.md
+        - name: Azure SQL Databases
+          href: search-howto-connecting-azure-sql-database-to-azure-search-using-indexers.md
+        - name: Azure SQL Managed Instance
+          href: search-howto-connecting-azure-sql-mi-to-azure-search-using-indexers.md
+        - name: Azure SQL Server VM
+          href: search-howto-connecting-azure-sql-iaas-to-azure-search-using-indexers.md
     - name: スキルを使用する (AI)
       items:
         - name: Cognitive Services リソースをアタッチする
