--- a/articles/synapse-analytics/toc.yml
+++ b/articles/synapse-analytics/toc.yml
@@ -11,16 +11,16 @@
         - name: はじめに
           href: get-started.md
           displayName: 'get, started'
-        - name: 1 Synapse ワークスペースを作成する
+        - name: 1 ワークスペースを作成する
           href: get-started-create-workspace.md
           displayName: 'get, started'
-        - name: 2 SQL プールを使用して分析する
+        - name: 2 SQL プールを使用する
           href: get-started-analyze-sql-pool.md
           displayName: 'get, started'
-        - name: 3 Spark を使用して分析する
+        - name: 3 Spark を使用する
           href: get-started-analyze-spark.md
           displayName: 'get, started'
-        - name: 4 SQL オンデマンドを使用して分析する
+        - name: 4 SQL オンデマンドを使用する
           href: get-started-analyze-sql-on-demand.md
           displayName: 'get, started'
         - name: 5 ストレージ アカウント内のデータを分析する
@@ -35,7 +35,7 @@
         - name: 8 監視する
           href: get-started-monitor.md
           displayName: 'get, started'
-        - name: 9 Knowledge Center を調べる
+        - name: 9 Knowledge Center を探索する
           href: get-started-knowledge-center.md
           displayName: 'get, started'
     - name: チート シート
@@ -84,6 +84,8 @@
   items:
     - name: Apache Spark アプリケーションを実行する
       href: ./spark/intellij-tool-synapse.md
+    - name: Spark プールに対して PySpark アプリケーションを実行する
+      href: ./spark/vscode-tool-synapse.md
     - name: Spark ジョブ定義
       href: ./spark/apache-spark-job-definitions.md
     - name: Power BI Desktop
@@ -210,6 +212,8 @@
               href: ../data-factory/concepts-data-flow-expression-builder.md?toc=/azure/synapse-analytics/toc.json&bc=/azure/synapse-analytics/breadcrumb/toc.json
             - name: 式言語
               href: ../data-factory/data-flow-expression-functions.md?toc=/azure/synapse-analytics/toc.json&bc=/azure/synapse-analytics/breadcrumb/toc.json
+            - name: Azure Data Factory との違い
+              href: ./data-integration/concepts-data-factory-differences.md
     - name: Spark
       items:
         - name: 概要
