--- a/articles/time-series-insights/TOC.yml
+++ b/articles/time-series-insights/TOC.yml
@@ -15,6 +15,8 @@
   items:
     - name: Time Series Insights Gen2 環境を設定する
       href: tutorials-set-up-tsi-environment.md
+    - name: Azure Digital Twins と Time Series Insights Gen2 間のモデルの同期
+      href: tutorials-model-sync.md
 - name: 概念
   items:
     - name: Azure Time Series Insights Gen2
