--- a/articles/storage/blobs/TOC.yml
+++ b/articles/storage/blobs/TOC.yml
@@ -251,8 +251,12 @@
                       href: ../common/storage-import-export-tool-repairing-an-export-job-v1.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
                 - name: よく寄せられる質問
                   href: ../common/storage-import-export-service-faq.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-                - name: REST API
-                  href: /rest/api/storageimportexport/jobs
+                - name: リファレンス
+                  items:
+                    - name: REST API
+                      href: /rest/api/storageimportexport/jobs
+                    - name: Azure PowerShell
+                      href: /powershell/module/Az.ImportExport
                 - name: サポートに問い合わせる
                   href: ../common/storage-import-export-contact-microsoft-support.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
                 - name: アーカイブ
