--- a/articles/cosmos-db/TOC.yml
+++ b/articles/cosmos-db/TOC.yml
@@ -21,6 +21,8 @@
           href: create-sql-api-dotnet.md
         - name: Java アプリ
           href: create-sql-api-java.md
+        - name: Spring Data アプリ
+          href: create-sql-api-spring-data.md
         - name: Node.js アプリ
           href: create-sql-api-nodejs.md
         - name: Python アプリ
@@ -73,6 +75,8 @@
       href: sql-api-dotnet-v3sdk-samples.md
     - name: Java SDK v4 のサンプル
       href: sql-api-java-sdk-samples.md
+    - name: Spring Data v3 のサンプル
+      href: sql-api-spring-data-sdk-samples.md
     - name: Node.js のサンプル
       href: sql-api-nodejs-samples.md
     - name: Python のサンプル
@@ -1074,7 +1078,7 @@
               href: troubleshoot-not-found.md
             - name: 承認されていない問題のトラブルシューティング
               href: troubleshoot-unauthorized.md
-            - name: 複数リージョン環境での SDK の可用性
+            - name: 複数リージョン環境での可用性の問題
               href: troubleshoot-sdk-availability.md
         - name: .NET
           items:
@@ -1118,6 +1122,8 @@
           href: ../synapse-analytics/synapse-link/how-to-connect-synapse-link-cosmos-db.md?toc=/azure/cosmos-db/toc.json&bc=/azure/cosmos-db/breadcrumb/toc.json
         - name: Azure Synapse Spark を使用してクエリを実行する
           href: ../synapse-analytics/synapse-link/how-to-query-analytical-store-spark.md?toc=/azure/cosmos-db/toc.json&bc=/azure/cosmos-db/breadcrumb/toc.json
+        - name: Synapse SQL サーバーレスを使用してクエリを実行する
+          href: ../synapse-analytics/sql/query-cosmos-db-analytical-store.md?toc=/azure/cosmos-db/toc.json&bc=/azure/cosmos-db/breadcrumb/toc.json
         - name: Synapse Link で Power BI を使用する
           href: synapse-link-power-bi.md
     - name: Apache Spark による組み込みの分析
